rest/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: rest-servers
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 3
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest-server
        image: kchemudu/scalable-ocr-rest:1.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
