rest/rest-ingress-gke.yaml
##
## You provide this
##
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    # ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: rest-server
          servicePort: 80
